[2600] Korrektur Bilder holen

--- a/README.textile
+++ b/README.textile
@@ -28,6 +28,15 @@ bc.   $ gem install elexis-wiki-interface
 
 h2. Usage
 
+h3. using some built-in helpers (mainly for the jenkins-CI)
+
+Each of the helper script below should work if you have a ruby installation >= 1.9.2 and executed @gem install bundler && bundle install@ in directory where
+bc.   wiki_pull
+  wiki_pull
+  wiki_push
+
+h3. in a ruby script
+
 bc.   require 'elexis/wiki/interface'
   if =  Elexis::Wiki::Interface.new
   if.pull # get actual mediawiki content and place it under doc inside the plugin
