--- a/spec/data/push/ch.elexis.icpc/doc/test.mediawiki
+++ b/spec/data/push/ch.elexis.icpc/doc/test.mediawiki
@@ -1,3 +1,14 @@
 == Test ==
 
 Bitte ignorieren. Wird für Tests verwendet.
+
+== Ein Problem in einer Konsultation behandeln ==
+
+tag_one [[Image:ch.elexis.icpc:icpc1.png|image]]<br />
+tag_two [[Image:ch.elexis.icpc:icpc2.png|image]]<br />
+tag_three [[Image:icpc3.png|image]]<br />
+tag_four [[Datei:ch.elexis.icpc:icpc4.png|image]]<br />
+tag_five [[Datei:Ch.elexis.icpc:icpc5.png|image]]<br />
+
+
+
