--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.4.2 / 29.07.2015
+
+* Remove and correct obsolete image with name like <id>_somename.png
+* Report errors at the end of pulling
+
 === 0.4.1 / 29.07.2015
 
 * Verify/correct path of all references images
