--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.4.6 / 15.08.2015
+
+* Avoid adding an EOL at the end of the file
+
 === 0.4.5 / 14.08.2015
 
 * Don't report plugin without documenteation, as only features are required to have one
