--- a/history.textile
+++ b/history.textile
@@ -1,3 +1,9 @@
+h3. Version 0.5.1 (2015-10-23)
+
+* Cleanup doc
+* Fix an error when fetching doc_de/settings_agenda-druck1
+* Don't accept empty png/jpg files
+
 h3. Version 0.5.0 (2015-09-18)
 
 * Major cleanup, much more spec tests
