--- a/spec/data/images/ch.elexis.icpc/doc/test2.mediawiki
+++ b/spec/data/images/ch.elexis.icpc/doc/test2.mediawiki
@@ -13,7 +13,7 @@ tag_jpg [[Datei:Ch.elexis.icpc:icpc6.png|image]]<br />
 tag_gif [[Datei:Ch.elexis.icpc:icpc7.png|image]]<br />
 tag_utf [[File:kabel.png<U+200E>]]
 tag_frame_none [[File:Ch.elexis.icpc:icpc5.png|frame|none]] <br>
-
+tag_slash [[Image:Ch.elexis.icpc/favicon_green.png|image]]<br />
 
 
 
